# socketw

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.conf  README  README.md  SocketW.pc.in  SocketWConfig.cmake.in  appveyor.yml  build.py  conanfile.py  conanfile.txt
Docker/: Dockerfile.in
cmake/: CMakeCM.cmake
debian/: changelog  control  copyright
src/: Makefile  sw_base.cxx  sw_base.h  sw_ssl.cxx
